# subdomain

./: README.md  pyproject.toml
subdomain/: __init__.py  __main__.py  lib.py  subdomain.py
subdomain/dict/: test.txt
tests/: test_subdomain.py
