[tool.poetry]
name = "subdomain"
version = "0.1.4.11"
description = "这是一个使用异步协程的子域名爆破工具。"
authors = ["zmf96 <zmf96@qq.com>"]
readme = "README.md"
homepage = "https://github.com/HotSec/subdomain"
repository = "https://github.com/HotSec/subdomain"

[tool.poetry.dependencies]
python = "^3.8"
aiodns = "^3.0.0"
loguru = "^0.6.0"
IPy = "^1.01"
autopep8 = "^1.6.0"
pytest = "^5.2"
cp-common = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
